<resources>
    <string name="app_name">Booze Shop 24/7</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">E-mail ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="Register"><u>Register</u></string>
    <string name="_123456">123456</string>
    <string name="e_mail">E-mail</string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the <u> terms and conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="enter_password">Enter password</string>
    <string name="error_msg_enter_firstname">Please enter first name</string>
    <string name="error_msg_enter_lastname">Please enter lastname</string>
    <string name="error_missing_email">Please enter email</string>
    <string name="error_missing_password_field">Enter or repeat your password selected</string>
    <string name="error_confirm_password">You forgot to confirm password</string>
    <string name="error_message_password_and_confirmpassword_mismatch">Password and confirm password mismatch</string>
    <string name="error_missing_terms_and_conditions_field">Missing terms and conditions acceptance</string>
    <string name="please_wait">Please wait</string>
    <string name="error_msg_enter_email">Enter your email</string>
    <string name="reset_password">Reset password</string>
    <string name="btn_submit">Submit</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="forgot_password_title_description">Enter your e-mail id and we\'ll send you an email to reset your password</string>
    <string name="email_sent_success">A link to reset your password has been sent successfully!</string>
    <string name="register_success">You have been successfully registrated!</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="btn_lbl_save">Save</string>
    <string name="phone_number">Phone number</string>
    <string name="read_storage_permission_denied">You denied permission from the storage. Try allowing it from the settings</string>
    <string name="image_selection_failed">Image selection failed</string>
    <string name="error_msg_enter_mobile_number">Provide your mobile number</string>
    <string name="msg_profile_update_successful">Your profile has been successfully updated</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_shopping_cart">Shopping cart</string>
    <string name="paying_for_the_order">Payment</string>
    <string name="title_store">Store</string>
    <string name="title_payment">Payment</string>
</resources>