<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_store">

    <fragment
        android:id="@+id/navigation_store"
        android:name="space.arkady.alcoholshop.activities.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="space.arkady.alcoholshop.activities.ui.shoppingcart.ShoppingCartFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="space.arkady.alcoholshop.activities.ui.payment.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment" />
</navigation>